<?xml version="1.0" encoding="UTF-8"?>

<FrameLayout
    android:background="@android:color/white"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:clickable="true"
            android:onClick="onClick"
            android:textSize="15dp"
            android:id="@+id/home"
            android:layout_margin="20dp"
            android:text="@string/home_text"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:clickable="true"
            android:onClick="onClick"
            android:textSize="15dp"
            android:id="@+id/page2"
            android:layout_margin="20dp"
            android:text="@string/page2_text"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:clickable="true"
            android:onClick="onClick"
            android:textSize="15dp"
            android:id="@+id/menu"
            android:layout_margin="20dp"
            android:text="@string/menu"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:clickable="true"
            android:onClick="onClick"
            android:textSize="15dp"
            android:id="@+id/setting"
            android:layout_margin="20dp"
            android:text="@string/Setting"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:clickable="true"
            android:onClick="onClick"
            android:textSize="15dp"
            android:id="@+id/exit"
            android:layout_margin="20dp"
            android:text="@string/exit_text"/>
    </LinearLayout>
</FrameLayout>